fix spacing issue

--- a/src/components/ListContainer.css
+++ b/src/components/ListContainer.css
@@ -2,6 +2,8 @@
   max-width: 61.625rem;
   width: 100%;
   margin-top: 1.5em;
+  margin-left: auto;
+  margin-right: auto;
   padding-left: 1em;
   padding-right: 1em;
   font-size: 14px;
