--- a/src/components/SeasonList.css
+++ b/src/components/SeasonList.css
@@ -4,5 +4,8 @@
   margin-top: 1.5em;
   padding-left: 1em;
   padding-right: 1em;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 14px;
 }
+
